# origami

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  adder.r1cs  cabal.project  circuit.wasm  flake.nix  origami.cabal  witness-generator.sh
app/: Main.hs
circuit/: origami.cabal
circuit/app/: Main.hs
circuit/src/ZK/: Adder.hs
circuit/test/: Main.hs
src/: main.rs
src/ZK/: Adder.hs
test/: Main.hs
wasm-solver/: .envrc  adder-solver.cabal  build-wasm.sh  cabal.project  default.nix
wasm-solver/app/: Main.hs
wasm-solver/cbits/: init.c
