cabal-version:      3.0
name:               origami
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             martyall
maintainer:         martyall@protonmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable origami
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        origami
    hs-source-dirs:   app
    default-language: GHC2021

test-suite origami-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.1.0,
        origami
