cabal-version:      3.0
name:               origami
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             martyall
maintainer:         martyall@protonmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

common deps
    build-depends:
        base ^>=4.19.1.0
      , arithmetic-circuits
      , arithmetic-circuits:language
      , galois-field
      , protolude
      , vector

common extensions
    default-extensions:
        DataKinds
        NoImplicitPrelude
        OverloadedStrings

library
    import:           warnings, deps, extensions
    exposed-modules:  ZK.Adder
    build-depends:    base ^>=4.19.1.0
    hs-source-dirs:   src
    default-language: GHC2021

executable origami
    import:           warnings, deps, extensions
    main-is:          Main.hs
    build-depends:
        origami
      , arithmetic-circuits:circom-compat
    hs-source-dirs:   app
    default-language: GHC2021

test-suite origami-test
    import:           warnings, deps, extensions
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        arithmetic-circuits:circom-compat
      , containers
      , hspec
      , origami
      , QuickCheck
